--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://order-go.github.io/mostaza-burger",
   "name": "mostaza_burger",
   "private": true,
   "version": "0.0.0",
